--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1404,7 +1404,7 @@ section {
   padding: 2px 0 2px 0;
   line-height: 1;
   font-weight: 700;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
 }
 
 #footer .footer-top .footer-info h3 span {
